tests/neg-custom-args/captures/scope-extrusions.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scope-extrusions.scala:10:8 ------------------------------
10 |    v = x  // error
   |        ^
   |        Found:    (x : IO)
   |        Required: IO^{any}
   |
   |        Note that capability `x` is not included in capture set {any}
   |        because (x : IO) in method f1 is not visible from any in variable v.
   |
   |        where:    any is a root capability classified as SharedCapability in the type of variable v
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scope-extrusions.scala:11:8 ------------------------------
11 |    w = g  // error
   |        ^
   |        Found:    () ->{x} Unit
   |        Required: () ->{any} Unit
   |
   |        Note that capability `x` is not included in capture set {any}
   |        because (x : IO) in method f1 is not visible from any in variable w.
   |
   |        where:    any is a root capability in the type of variable w
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scope-extrusions.scala:20:11 -----------------------------
20 |  withFile(io => io)         // error
   |           ^^^^^^^^
   |Capability `io` outlives its scope: it leaks into outer capture set 's1 which is owned by method test.
   |The leakage occurred when trying to match the following types:
   |
   |Found:    (io: IO^) ->'s2 IO^{io}
   |Required: IO^ => IO^'s1
   |
   |where:    => refers to a root capability created in method test when checking argument to parameter op of method withFile
   |          ^  refers to the root capability caps.any
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scope-extrusions.scala:21:11 -----------------------------
21 |  withFile(id)               // error
   |           ^^
   |Capability `x` outlives its scope: it leaks into outer capture set 's3 which is owned by method test.
   |The leakage occurred when trying to match the following types:
   |
   |Found:    (x: IO^) ->'s4 IO^{x}
   |Required: IO^ => IO^'s3
   |
   |where:    => refers to a root capability created in method test when checking argument to parameter op of method withFile
   |          ^  refers to the root capability caps.any
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scope-extrusions.scala:22:11 -----------------------------
22 |  withFile(x => id(x))       // error
   |           ^^^^^^^^^^
   |Capability `x` outlives its scope: it leaks into outer capture set 's5 which is owned by method test.
   |The leakage occurred when trying to match the following types:
   |
   |Found:    (x: IO^) ->'s6 IO^{x}
   |Required: IO^ => IO^'s5
   |
   |where:    => refers to a root capability created in method test when checking argument to parameter op of method withFile
   |          ^  refers to the root capability caps.any
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scope-extrusions.scala:23:11 -----------------------------
23 |  withFile(id2)              // error, note mentions any since we never have a more specific include failure
   |           ^^^
   |Capability `fresh` outlives its scope: it leaks into outer capture set 's7 which is owned by method test.
   |The leakage occurred when trying to match the following types:
   |
   |Found:    (x: IO^) ->'s8 IO^{fresh²}
   |Required: IO^ => IO^'s7
   |
   |where:    =>     refers to a root capability created in method test when checking argument to parameter op of method withFile
   |          ^      refers to the root capability caps.any
   |          fresh  is a root capability associated with the result type of (x: IO^): IO^'s7
   |          fresh² is a root capability associated with the result type of (x: IO^): IO^{fresh²}
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scope-extrusions.scala:24:11 -----------------------------
24 |  withFile(x => id2(x))      // error, note mentions any since we never have a more specific include failure
   |           ^^^^^^^^^^^
   |Capability `fresh` outlives its scope: it leaks into outer capture set 's9 which is owned by method test.
   |The leakage occurred when trying to match the following types:
   |
   |Found:    (x: IO^) ->'s10 IO^{fresh²}
   |Required: IO^ => IO^'s9
   |
   |where:    =>     refers to a root capability created in method test when checking argument to parameter op of method withFile
   |          ^      refers to the root capability caps.any
   |          fresh  is a root capability associated with the result type of (x: IO^): IO^'s9
   |          fresh² is a root capability associated with the result type of (x: IO^): IO^{fresh²}
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scope-extrusions.scala:25:11 -----------------------------
25 |  withFile(identity)         // error, note mentions any since we never have a more specific include failure
   |           ^^^^^^^^
   |Capability `x` outlives its scope: it leaks into outer capture set 's11 which is owned by method test.
   |The leakage occurred when trying to match the following types:
   |
   |Found:    (x: IO^) ->'s12 IO^{x}
   |Required: IO^ => IO^'s11
   |
   |where:    => refers to a root capability created in method test when checking argument to parameter op of method withFile
   |          ^  refers to the root capability caps.any
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scope-extrusions.scala:26:11 -----------------------------
26 |  withFile(x => identity(x)) // error, note mentions any since we never have a more specific include failure
   |           ^^^^^^^^^^^^^^^^
   |Capability `x` outlives its scope: it leaks into outer capture set 's13 which is owned by method test.
   |The leakage occurred when trying to match the following types:
   |
   |Found:    (x: IO^) ->'s14 IO^{x}
   |Required: IO^ => IO^'s13
   |
   |where:    => refers to a root capability created in method test when checking argument to parameter op of method withFile
   |          ^  refers to the root capability caps.any
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scope-extrusions.scala:28:12 -----------------------------
28 |  withFile: io =>     // error
   |            ^
   |Capability `io` outlives its scope: it leaks into outer capture set 's15 which is owned by method test.
   |The leakage occurred when trying to match the following types:
   |
   |Found:    (io: IO^) ->'s16 () ->{io} Unit
   |Required: IO^ => () ->'s15 Unit
   |
   |where:    => refers to a root capability created in method test when checking argument to parameter op of method withFile
   |          ^  refers to the root capability caps.any
   |
29 |    () => println(io)
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scope-extrusions.scala:31:32 -----------------------------
31 |  val f2: IO => IO = (x: IO) => x  // error
   |                                ^
   |                       Found:    (x : IO)
   |                       Required: IO^{any}
   |
   |                       Note that capability `x` is not included in capture set {any}
   |                       because (x : IO) in an enclosing function is not visible from any in value f2.
   |
   |                       where:    any is a root capability classified as SharedCapability in the type of value f2
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scope-extrusions.scala:33:21 -----------------------------
33 |  val f4: IO => IO = f3  // error
   |                     ^^
   |                     Found:    (f3 : (x$0: IO) ->{} IO^{x$0})
   |                     Required: IO^ => IO^{any}
   |
   |                     Note that capability `x$0` is not included in capture set {any}
   |                     because (x$0 : IO) is not visible from any in value f4.
   |
   |                     where:    =>  refers to a root capability in the type of value f4
   |                               ^   refers to the root capability caps.any
   |                               any is a root capability classified as SharedCapability in the type of value f4
   |
   | longer explanation available when compiling with `-explain`
